[gd_scene load_steps=6 format=3 uid="uid://xb44aqk3jwx8"]

[ext_resource type="Texture2D" uid="uid://iwt2mhinad6m" path="res://Assets/Wallpaper.jpg" id="1_3jqyg"]
[ext_resource type="FontFile" uid="uid://bhgxrt1w2x0tf" path="res://SuperMario256.ttf" id="1_8cpry"]
[ext_resource type="Script" path="res://Escenas/game_over.gd" id="1_omij4"]
[ext_resource type="Texture2D" uid="uid://xopaai7iaiyu" path="res://Assets/gameover.png" id="2_a0ct2"]
[ext_resource type="Theme" uid="uid://infegbnmvssg" path="res://ButtonTheme.tres" id="3_fjrha"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_omij4")

[node name="Wallpaper" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3jqyg")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 80.0
offset_right = 1168.0
offset_bottom = 350.0
texture = ExtResource("2_a0ct2")

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -38.0
offset_right = 140.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_fjrha")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "puntja"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = 48.0
offset_right = 230.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fjrha")
theme_override_fonts/font = ExtResource("1_8cpry")
theme_override_font_sizes/font_size = 40
text = "Volver a intentar"

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_fjrha")
theme_override_fonts/font = ExtResource("1_8cpry")
theme_override_font_sizes/font_size = 40
text = "Menu principal"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_fjrha")
theme_override_fonts/font = ExtResource("1_8cpry")
theme_override_font_sizes/font_size = 40
text = "Salir del juego"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
